--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">EasyLibDos</string>
+    <string name="nav_profile">Profile</string>
+    <string name="nav_map">Mapa</string>
+    <string name="nav_notify">Notification</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nav_filter">Find</string>
 </resources>
