Error al obtener El objeto silla al dar click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EasyLibDos</string>
+    <string name="app_name">Bibliotech</string>
     <string name="nav_profile">Profile</string>
     <string name="nav_map">Mapa</string>
     <string name="nav_notify">Notification</string>
